--- a/package.json
+++ b/package.json
@@ -8,18 +8,18 @@
     "build": "tsc",
     "dev": "tsc && node src/main.js"
   },
-  "devDependencies": {
+  "dependencies": {
+    "@caporal/core": "^2.0.2",
+    "@types/fs-extra": "^9.0.13",
     "@types/luxon": "^2",
     "@types/node": "^17.0.21",
     "@types/puppeteer": "^5.4.5",
-    "ts-node": "^10.6.0",
-    "typescript": "^4.6.2"
-  },
-  "dependencies": {
-    "@caporal/core": "^2.0.2",
     "caporal": "^1.4.0",
     "chrono-node": "^2.3.8",
+    "fs-extra": "^10.0.1",
     "luxon": "^2.3.1",
-    "puppeteer": "^13.4.1"
+    "puppeteer": "^13.4.1",
+    "ts-node": "^10.6.0",
+    "typescript": "^4.6.2"
   }
 }
