--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "berliner-baeder-booking",
   "description": "Automate booking time slot tickets for public swimming pools in Berlin",
-  "version": "1.0.0",
+  "version": "0.0.0",
   "packageManager": "yarn@3.2.0",
   "bin": "src/main.js",
   "scripts": {
     "build": "tsc",
+    "version": "ts-node generate-version.ts",
     "dev": "tsc && node src/main.js"
   },
   "dependencies": {
@@ -17,6 +18,7 @@
     "caporal": "^1.4.0",
     "chrono-node": "^2.3.8",
     "fs-extra": "^10.0.1",
+    "git-describe": "^4.1.0",
     "luxon": "^2.3.1",
     "puppeteer": "^13.4.1",
     "ts-node": "^10.6.0",
