--- a/.github/workflows/build-test-release.yml
+++ b/.github/workflows/build-test-release.yml
@@ -27,6 +27,7 @@ jobs:
       uses: actions/setup-node@v3
       with:
         node-version: 17.x
+    - run: yarn set version stable
     - run: yarn
     - run: yarn version
     - name: Check & Set VERSION
