--- a/.github/workflows/build-test-release.yml
+++ b/.github/workflows/build-test-release.yml
@@ -21,9 +21,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
-    - run: git fetch --prune --unshallow --tags
-    - run: git log --all
-    - run: git describe --long
+      with:
+        fetch-depth: 0
     - name: Setup Node 17
       uses: actions/setup-node@v3
       with:
